<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">


    <RelativeLayout
        android:id="@+id/user_page_retweeted_by_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <ImageView
            android:id="@+id/user_page_retweet_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_retweet_button"/>
        <TextView
            android:id="@+id/user_page_retweeted_by"
            android:layout_toEndOf="@id/user_page_retweet_pic"
            android:textStyle="bold"
            style="@style/BaseTextStyle"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/user_page_time"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/user_page_retweet_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/user_page_retweet_icon"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/user_page_retweet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="@style/BaseTextStyle"
            android:layout_toEndOf="@id/user_page_retweet_icon"
            android:text="@string/user_name"/>
        <TextView
            android:id="@+id/user_page_retweet_at_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BaseTextStyle"
            android:layout_below="@id/user_page_retweet_name"
            android:layout_toEndOf="@id/user_page_retweet_icon"
            android:text="@string/at"/>
        <TextView
            android:id="@+id/user_page_retweet_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_below="@id/user_page_retweet_name"
            android:layout_toEndOf="@id/user_page_retweet_at_mark"
            style="@style/BaseTextStyle"
            android:text="@string/screen_name"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/user_page_tweet"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/user_page_image_linear_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/user_page_media1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="visible"/>
            <ImageView
                android:id="@+id/user_page_video_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video_play2"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

        <ImageView
            android:id="@+id/user_page_media2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_page_image_linear_2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingTop="5dp">
        <ImageView
            android:id="@+id/user_page_media3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
        <ImageView
            android:id="@+id/user_page_media4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/user_page_video"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/user_page_youtube_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone">
        <ImageView
            android:id="@+id/user_page_youtube_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/user_page_youtube_play_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_youtube_play"
            android:background="#000000"
            android:alpha="0.7"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_page_quote_container"
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_border"
        android:visibility="gone">
        <TextView
            android:id="@+id/user_page_quote_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BaseTextStyle"
            android:textStyle="bold"
            android:text="name"/>
        <TextView
            android:id="@+id/user_page_quote_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_page_quote_name"
            style="@style/BaseTextStyle"
            android:text="test text"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <ImageView
            android:id="@+id/user_page_reply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_reply_button"/>
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="100"-->
        <!--android:paddingEnd="20dp"/>-->
        <ImageView
            android:id="@+id/user_page_retweet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_retweet_button"/>
        <TextView
            android:id="@+id/user_page_retweet_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/darker_gray"
            android:paddingEnd="20dp"
            android:text="100,000"/>
        <ImageView
            android:id="@+id/user_page_fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favarit_off"/>
        <TextView
            android:id="@+id/user_page_fav_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/darker_gray"
            android:paddingEnd="20dp"
            android:text="100,000"/>
    </LinearLayout>

    <!--don't forget to do style="@style/BaseTextStyle" for texts!!!!!-->
</LinearLayout>