<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tweet_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.simleman.moritwitter.com.orangesunshine.moritwitter.TweetDetailActivity"
    tools:showIn="@layout/activity_tweet_detail">

    <ProgressBar
        android:id="@+id/detail_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_replied_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_progress_bar"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
    <LinearLayout
        android:id="@+id/tweet_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_replied_recycler"
        android:paddingBottom="5dp">
        <ImageView
            android:id="@+id/tweet_user_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="User Icon Picture"
            android:src="@android:drawable/sym_def_app_icon"/>

        <TextView
            android:id="@+id/tweet_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="0dp"
            android:text="UserName"
            />

    </LinearLayout>


    <com.luseen.autolinklibrary.AutoLinkTextView
        android:id="@+id/tweet_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tweet_header_layout"
        android:paddingBottom="2dp"
        android:text="Loading" />

    <LinearLayout
        android:id="@+id/detail_image_linear_1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/tweet_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/detail_media1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:contentDescription="@string/media1"
                tools:ignore="ContentDescription" />
            <ImageView
                android:id="@+id/detail_video_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video_play2"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

        <ImageView
            android:id="@+id/detail_media2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_image_linear_2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/detail_image_linear_1"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingTop="5dp">
        <ImageView
            android:id="@+id/detail_media3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
        <ImageView
            android:id="@+id/detail_media4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:visibility="visible"/>
    </LinearLayout>

    <VideoView
        android:id="@+id/detail_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_image_linear_2"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/detail_youtube_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/detail_video"
        android:visibility="gone">
        <ImageView
            android:id="@+id/detail_youtube_thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/detail_youtube_play_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_youtube_play"
            android:background="#000000"
            android:alpha="0.7"/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_youtube_container"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tweet_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

    </LinearLayout>
    
    
    
    <View
        android:id="@+id/tweet_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/time_layout"
        />
    
    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tweet_line1">

        <TextView
            android:id="@+id/retweet_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="--" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/retweet"/>

        <TextView
            android:id="@+id/like_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="--" />
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/like"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    
    
    <View
        android:id="@+id/tweet_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/status_layout"/>
    
    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tweet_line2">
        <ImageView
            android:id="@+id/reply_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle"
            android:src="@drawable/ic_reply_button"/>
        <ImageView
            android:id="@+id/retweet_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle"
            android:src="@drawable/ic_retweet_button"/>
        <ImageView
            android:id="@+id/like_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle"
            android:src="@drawable/ic_favarit_off"/>
        <ImageView
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/ic_delete"/>
    </LinearLayout>
    
    
    <View
        android:id="@+id/tweet_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/action_layout"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_recycler_view"
        android:layout_below="@id/tweet_line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
    <ProgressBar
        android:id="@+id/detail_reply_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_recycler_view"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</RelativeLayout>
